--- a/search.html
+++ b/search.html
@@ -95,14 +95,23 @@
 							<li class="has-submenu active">
 								<a href="">Patients <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="pharmacy-index.html">Pharmacy</a></li>
-									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
-									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
-									<li><a href="product-all.html">Product</a></li>
-									<li><a href="product-description.html">Product Description</a></li>
-									<li><a href="cart.html">Cart</a></li>
-									<li><a href="product-checkout.html">Product Checkout</a></li>
-									<!--<li><a href="payment-success.html">Payment Success</a></li>-->
+									<li class="has-submenu">
+										<!--<a href="#">Doctors</a>
+										 <ul class="submenu">
+											<li><a href="map-grid.html">Map Grid</a></li>
+											<li><a href="map-list.html">Map List</a></li>
+										</ul>-->
+									</li>
+									<li><a href="search.html">Search Doctor</a></li>
+									<li><a href="doctor-profile.html">Doctor Profile</a></li>
+									<li><a href="booking.html">Booking</a></li>
+									<li><a href="checkout.html">Checkout</a></li>
+									<li><a href="booking-success.html">Booking Success</a></li>
+									<li><a href="patient-dashboard.html">Patient Dashboard</a></li>
+									<li><a href="favourites.html">Favourites</a></li>
+									<!--<li><a href="chat.html">Chat</a></li>
+									<li><a href="profile-settings.html">Profile Settings</a></li>
+									<li><a href="change-password.html">Change Password</a></li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu">
