--- a/lab-details.html
+++ b/lab-details.html
@@ -224,8 +224,8 @@
 										<div class="clinic-details">
 											<div class="clini-infos pt-3">
 										
-											<p class="doc-location mb-2"><i class="fas fa-phone-volume mr-1"></i> 320-795-8815</p>
-											<p class="doc-location mb-2 text-ellipse"><i class="fas fa-map-marker-alt mr-1"></i> 96 Red Hawk Road Cyrus, MN 56323 </p>
+											<p class="doc-location mb-2"><i class="fas fa-phone-volume mr-1"></i> +91 9955871746</p>
+											<p class="doc-location mb-2 text-ellipse"><i class="fas fa-map-marker-alt mr-1"></i> Hajipur,Hospital Road 844101 </p>
 											<p class="doc-location mb-2"><i class="fas fa-chevron-right mr-1"></i> Chemists, Surgical Equipment Dealer</p>
 											
 											<p class="doc-location mb-2"><i class="fas fa-chevron-right mr-1"></i> Opens at 08.00 AM</p>
@@ -264,7 +264,7 @@
 										<a class="nav-link" href="#doc_reviews" data-toggle="tab">Reviews</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" href="#doc_business_hours" data-toggle="tab">Business Hours</a>
+										<a class="nav-link" href="#doc_business_hours" data-toggle="tab">Hospital Honours</a>
 									</li>
 								</ul>
 							</nav>
@@ -504,7 +504,7 @@
 													<img class="avatar avatar-sm rounded-circle" alt="User Image" src="assets/img/patients/patient.jpg">
 													<div class="comment-body">
 														<div class="meta-data">
-															<span class="comment-author">Armando Pack</span>
+															<span class="comment-author">Neha Singh</span>
 															<span class="comment-date">Reviewed 2 Days ago</span>
 															<div class="review-count rating">
 																<i class="fas fa-star filled"></i>
@@ -516,10 +516,7 @@
 														</div>
 														<p class="recommended"><i class="far fa-thumbs-up"></i> I recommend the doctor</p>
 														<p class="comment-content">
-															Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-															sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-															Ut enim ad minim veniam, quis nostrud exercitation.
-															Curabitur non nulla sit amet nisl tempus
+We think something between 8 to 9 out of 10 patients walks out of the hospital satisfied, but typical web reviews make hospitals look much worse. 
 														</p>
 														<div class="comment-reply">
 															<a class="comment-btn" href="#">
@@ -545,7 +542,7 @@
 															<img class="avatar avatar-sm rounded-circle" alt="User Image" src="assets/img/patients/patient1.jpg">
 															<div class="comment-body">
 																<div class="meta-data">
-																	<span class="comment-author">Lindsey Kesterson</span>
+																	<span class="comment-author">Swati Ray</span>
 																	<span class="comment-date">Reviewed 3 Days ago</span>
 																	<div class="review-count rating">
 																		<i class="fas fa-star filled"></i>
@@ -556,10 +553,7 @@
 																	</div>
 																</div>
 																<p class="comment-content">
-																	Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-																	sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-																	Ut enim ad minim veniam.
-																	Curabitur non nulla sit amet nisl tempus
+Dr.Madhushan Singh completed my both knee surgeries in an exceptional manner. His supporting nature during my hospitalization was of immense help. Despite his busy schedule of surgery and OPD, he finds time to visit the operated patients at least 4 to 5 times in a day cheering and encouraging them.
 																</p>
 																<div class="comment-reply">
 																	<a class="comment-btn" href="#">
@@ -590,7 +584,7 @@
 													<img class="avatar avatar-sm rounded-circle" alt="User Image" src="assets/img/patients/patient2.jpg">
 													<div class="comment-body">
 														<div class="meta-data">
-															<span class="comment-author">Travis Trimble</span>
+															<span class="comment-author">Chhotu Kumar</span>
 															<span class="comment-date">Reviewed 4 Days ago</span>
 															<div class="review-count rating">
 																<i class="fas fa-star filled"></i>
@@ -601,10 +595,7 @@
 															</div>
 														</div>
 														<p class="comment-content">
-															Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-															sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-															Ut enim ad minim veniam, quis nostrud exercitation.
-															Curabitur non nulla sit amet nisl tempus
+I can't forget how many efforts made by Dr.Pallavi every morning and evening she came in my room to see how was my health status.
 														</p>
 														<div class="comment-reply">
 															<a class="comment-btn" href="#">
@@ -860,15 +851,15 @@
 									<div class="footer-contact-info">
 										<div class="footer-address">
 											<span><i class="fas fa-map-marker-alt"></i></span>
-											<p> 3556  Beech Street, San Francisco,<br> California, CA 94108 </p>
+											<p>Baghdulhan Rd,Oposite Development of Mthematics<br>Baghdulhan ,Hajipur,Bihar,844101</p>
 										</div>
 										<p>
 											<i class="fas fa-phone-alt"></i>
-											+1 315 369 5943
+											<a href="tel:9955871746">+91 9955871746</a>
 										</p>
 										<p class="mb-0">
 											<i class="fas fa-envelope"></i>
-											doccure@example.com
+											<a href="/cdn-cgi/l/email-protection#8bf8fceaffe2f9eaf2babde3e1fbcbece6eae2e7a5e8e4e6b4d8fee9e1eee8ffb6c3eee7e7e4aeb9bbeaeceae2e5" target="_top">learn@khabaitech.com</a>
 										</p>
 									</div>
 								</div>
