--- a/diagnostics-all.html
+++ b/diagnostics-all.html
@@ -52,13 +52,15 @@
 							</span>
 						</a>
 						<a href="index.html" class="navbar-brand logo">
-							<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+							<h2>Doctor Khojo</h2>
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
-								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+								<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+								<h2>Doctor Khojo</h2>
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
 								<i class="fas fa-times"></i>
@@ -701,11 +703,13 @@
 							
 								<!-- Footer Widget -->
 								<div class="footer-widget footer-about">
-									<div class="footer-logo">
-										<img src="assets/img/footer-logo.png" alt="logo">
+									<div class="footer-logo khojo">
+										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
+										<h2>Doctor Khojo</h2>
 									</div>
 									<div class="footer-about-content">
-										<p>Hospital, an institution that is built, staffed, and equipped for the diagnosis of disease; for the treatment, both medical and surgical, of the sick and the injured; and for their housing during this process. </p>
+										<!--<p>Hospital, an institution that is built, staffed, and equipped for the diagnosis of disease; for the treatment, both medical and surgical,
+                                                                                      of the sick and the injured; and for their housing during this process. </p>-->
 										<div class="social-icon">
 											<ul>
 												<li>
