--- a/lab-search.html
+++ b/lab-search.html
@@ -448,7 +448,7 @@
 							
 								<!-- Footer Widget -->
 								<div class="footer-widget footer-about">
-									<div class="footer-logo">
+									<div class="footer-logo khojo">
 										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
 										<h2>Doctor Khojo</h2>
 									</div>
