--- a/invoices.html
+++ b/invoices.html
@@ -31,7 +31,7 @@
 		<div class="main-wrapper">
 		
 			<!-- Header -->
-			<header class="header">
+			                    				<header class="header">
 				<nav class="navbar navbar-expand-lg header-nav">
 					<div class="navbar-header">
 						<a id="mobile_btn" href="javascript:void(0);">
@@ -43,7 +43,7 @@
 						</a>
 						<a href="index.html" class="navbar-brand logo">
 							<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
-							<h2>Doctor khojo</h2>
+							<h2>Doctor Khojo</h2>
 						</a>
 					</div>
 					<div class="main-menu-wrapper">
@@ -56,16 +56,16 @@
 								<i class="fas fa-times"></i>
 							</a>
 						</div>
-						<ul class="main-nav">
+						   <ul class="main-nav">
 							<li class="ml-3">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-submenu">
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="doctor-dashboard.html">Doctor Dashboard</a></li>
+									<li><a href="doctors.html">Doctor </a></li>
 									<li><a href="appointments.html">Appointments</a></li>
-									<li><a href="schedule-timings.html">Schedule Timing</a></li>
+									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
 									<li><a href="patient-profile.html">Patients Profile</a></li>
 									<li><a href="chat-doctor.html">Chat</a></li>
@@ -80,18 +80,18 @@
 											<li><a href="blog-details.html">Blog view</a></li>
 											<li><a href="doctor-add-blog.html">Add Blog</a></li>
 										</ul>
-									</li>
+									</li>-->
 								</ul>
 							</li>	
 							<li class="has-submenu">
 								<a href="">Patients <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li class="has-submenu">
-										<a href="#">Doctors</a>
-										<ul class="submenu">
+										<!--<a href="#">Doctors</a>
+										 <ul class="submenu">
 											<li><a href="map-grid.html">Map Grid</a></li>
 											<li><a href="map-list.html">Map List</a></li>
-										</ul>
+										</ul>-->
 									</li>
 									<li><a href="search.html">Search Doctor</a></li>
 									<li><a href="doctor-profile.html">Doctor Profile</a></li>
@@ -100,43 +100,44 @@
 									<li><a href="booking-success.html">Booking Success</a></li>
 									<li><a href="patient-dashboard.html">Patient Dashboard</a></li>
 									<li><a href="favourites.html">Favourites</a></li>
-									<li><a href="chat.html">Chat</a></li>
+									<!--<li><a href="chat.html">Chat</a></li>
 									<li><a href="profile-settings.html">Profile Settings</a></li>
-									<li><a href="change-password.html">Change Password</a></li>
+									<li><a href="change-password.html">Change Password</a></li>-->
 								</ul>
-							</li>	
+							</li>
 							<li class="has-submenu">
 								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="pharmacy-index.html">Pharmacy</a></li>
-									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
+									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="product-all.html">Product</a></li>
 									<li><a href="product-description.html">Product Description</a></li>
 									<li><a href="cart.html">Cart</a></li>
 									<li><a href="product-checkout.html">Product Checkout</a></li>
-									<li><a href="payment-success.html">Payment Success</a></li>
+									<!--<li><a href="payment-success.html">Payment Success</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu active">
-								<a href="">Pages <i class="fas fa-chevron-down"></i></a>
+								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="voice-call.html">Voice Call</a></li>
-									<li><a href="video-call.html">Video Call</a></li>
-									<li><a href="search.html">Search Doctors</a></li>
-									<li><a href="calendar.html">Calendar</a></li>
-									<li><a href="components.html">Components</a></li>
-									<li class="has-submenu active">
+									<li><a href="diagnostics-index.html">Diagnostics</a></li>
+									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
+									<li><a href="lab-search.html">Lab Search</a></li>
+									<li><a href="lab-details.html">Lab Details</a></li>
+									<!--<li><a href="calendar.html">Calendar</a></li>
+									<li><a href="components.html">Components</a></li>-->
+									<li class="has-submenu">
 										<a href="invoices.html">Invoices</a>
 										<ul class="submenu">
 											<li class="active"><a href="invoices.html">Invoices</a></li>
 											<li><a href="invoice-view.html">Invoice View</a></li>
 										</ul>
 									</li>
-									<li><a href="blank-page.html">Starter Page</a></li>
+									<!--<li><a href="blank-page.html">Starter Page</a></li>-->
 									<li><a href="login.html">Login</a></li>
 									<li><a href="register.html">Register</a></li>
-									<li><a href="forgot-password.html">Forgot Password</a></li>
+									<!--<li><a href="forgot-password.html">Forgot Password</a></li>-->
 								</ul>
 							</li>
 							<li class="has-submenu">
@@ -157,7 +158,8 @@
 							<li class="login-link">
 								<a href="login.html">Login / Signup</a>
 							</li>
-						</ul>
+						</ul>		 
+		 
 					</div>		 
 					<ul class="nav header-navbar-rht">
 						<li class="nav-item contact-item">
@@ -166,37 +168,16 @@
 							</div>
 							<div class="header-contact-detail">
 								<p class="contact-header">Contact</p>
-								<p class="contact-info-header"> +91 9955871746</p>
+								<p class="contact-info-header"> +919955871746</p>
 							</div>
 						</li>
-						
-						<!-- User Menu -->
-						<li class="nav-item dropdown has-arrow logged-item">
-							<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-								<span class="user-img">
-									<img class="rounded-circle" src="assets/img/doctors/doctor-thumb-02.jpg" width="31" alt="Darren Elder">
-								</span>
-							</a>
-							<div class="dropdown-menu dropdown-menu-right">
-								<div class="user-header">
-									<div class="avatar avatar-sm">
-										<img src="assets/img/doctors/doctor-thumb-02.jpg" alt="User Image" class="avatar-img rounded-circle">
-									</div>
-									<div class="user-text">
-										<h6>Darren Elder</h6>
-										<p class="text-muted mb-0">Doctor</p>
-									</div>
-								</div>
-								<a class="dropdown-item" href="doctor-dashboard.html">Dashboard</a>
-								<a class="dropdown-item" href="doctor-profile-settings.html">Profile Settings</a>
-								<a class="dropdown-item" href="login.html">Logout</a>
-							</div>
+						<li class="nav-item">
+							<a class="nav-link header-login" href="login.html">login / Signup </a>
 						</li>
-						<!-- /User Menu -->
-						
 					</ul>
 				</nav>
 			</header>
+
 			<!-- /Header -->
 			
 			<!-- Breadcrumb -->
