--- a/invoice-view.html
+++ b/invoice-view.html
@@ -209,7 +209,8 @@
 									<div class="row">
 										<div class="col-md-6">
 											<div class="invoice-logo">
-												<img src="assets/img/logo.png" alt="logo">
+												<!--<img src="assets/img/logo.png" alt="logo">-->
+												<h2>Doctor Khojo</h2>
 											</div>
 										</div>
 										<div class="col-md-6">
@@ -349,6 +350,7 @@
 								<div class="footer-widget footer-about">
 									<div class="footer-logo khojo">
 										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
+										<h2>Doctor Khojo</h2>
 									</div>
 									<div class="footer-about-content">
 										<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->
