--- a/invoice-view.html
+++ b/invoice-view.html
@@ -123,7 +123,7 @@
 								<ul class="submenu">
 									<li><a href="diagnostics-index.html">Diagnostics</a></li>
 									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
-									<li class="active"><a href="lab-search.html">Lab Search</a></li>
+									<li><a href="lab-search.html">Lab Search</a></li>
 									<li><a href="lab-details.html">Lab Details</a></li>
 									<!--<li><a href="calendar.html">Calendar</a></li>
 									<li><a href="components.html">Components</a></li>-->
@@ -131,7 +131,7 @@
 										<a href="invoices.html">Invoices</a>
 										<ul class="submenu">
 											<li><a href="invoices.html">Invoices</a></li>
-											<li><a href="invoice-view.html">Invoice View</a></li>
+											<li class="active"><a href="invoice-view.html">Invoice View</a></li>
 										</ul>
 									</li>
 									<!--<li><a href="blank-page.html">Starter Page</a></li>-->
