--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
 							</a>
 						</div>
 						<ul class="main-nav">
-							<li>
+							<li class="ml-3">
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-submenu">
@@ -118,7 +118,7 @@
 									<!--<li><a href="payment-success.html">Payment Success</a></li>-->
 								</ul>
 							</li>
-							<li class="has-submenu active">
+							<li class="has-submenu ">
 								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="diagnostics-index.html">Diagnostics</a></li>
@@ -148,7 +148,7 @@
 									<li><a href="blog-details.html">Blog Details</a></li>
 								</ul>
 							</li>
-							<li class="has-submenu">
+							<li class="has-submenu active">
 								<a href="#" target="_blank">Admin <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="admin/index.html" target="_blank">Admin</a></li>
@@ -246,7 +246,7 @@
 							
 								<!-- Footer Widget -->
 								<div class="footer-widget footer-about">
-									<div class="footer-logo">
+									<div class="footer-logo khojo">
 										<!--<img src="assets/img/footer-logo.png" alt="logo">-->
 										<h2> Doctor Khojo</h2>
 									</div>
