--- a/index.html
+++ b/index.html
@@ -831,10 +831,10 @@
 												<a href="doctor-profile.html"><img src="assets/img/doctors/doctor-thumb-01.jpg" alt="Post Author"> <span>Dr. Ruby Perrin</span></a>
 											</div>
 										</li>
-										<li><i class="far fa-clock"></i> 4 Dec 2019</li>
+										<li><i class="far fa-clock"></i> 15 Mar 2020</li>
 									</ul>
 									<h3 class="blog-title"><a href="blog-details.html">Doccure – Making your clinic painless visit?</a></h3>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur em adipiscing elit, sed do eiusmod tempor.</p>
+									<!--<p class="mb-0">Lorem ipsum dolor sit amet, consectetur em adipiscing elit, sed do eiusmod tempor.</p>-->
 								</div>
 							</div>
 							<!-- /Blog Post -->
@@ -854,10 +854,10 @@
 												<a href="doctor-profile.html"><img src="assets/img/doctors/doctor-thumb-02.jpg" alt="Post Author"> <span>Dr. Darren Elder</span></a>
 											</div>
 										</li>
-										<li><i class="far fa-clock"></i> 3 Dec 2019</li>
+										<li><i class="far fa-clock"></i> 3 feb 2020</li>
 									</ul>
 									<h3 class="blog-title"><a href="blog-details.html">What are the benefits of Online Doctor Booking?</a></h3>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur em adipiscing elit, sed do eiusmod tempor.</p>
+									<!--<p class="mb-0">Lorem ipsum dolor sit amet, consectetur em adipiscing elit, sed do eiusmod tempor.</p>-->
 								</div>
 							</div>
 							<!-- /Blog Post -->
@@ -880,7 +880,7 @@
 										<li><i class="far fa-clock"></i> 3 Dec 2019</li>
 									</ul>
 									<h3 class="blog-title"><a href="blog-details.html">Benefits of consulting with an Online Doctor</a></h3>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur em adipiscing elit, sed do eiusmod tempor.</p>
+									<!--<p class="mb-0">Lorem ipsum dolor sit amet, consectetur em adipiscing elit, sed do eiusmod tempor.</p>-->
 								</div>
 							</div>
 							<!-- /Blog Post -->
@@ -900,10 +900,10 @@
 												<a href="doctor-profile.html"><img src="assets/img/doctors/doctor-thumb-04.jpg" alt="Post Author"> <span>Dr. Sofia Brient</span></a>
 											</div>
 										</li>
-										<li><i class="far fa-clock"></i> 2 Dec 2019</li>
+										<li><i class="far fa-clock"></i> 1 Jan 2020</li>
 									</ul>
 									<h3 class="blog-title"><a href="blog-details.html">5 Great reasons to use an Online Doctor</a></h3>
-									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur em adipiscing elit, sed do eiusmod tempor.</p>
+									<!--<p class="mb-0">Lorem ipsum dolor sit amet, consectetur em adipiscing elit, sed do eiusmod tempor.</p>-->
 								</div>
 							</div>
 							<!-- /Blog Post -->
